--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,13 +65,6 @@
             android:layout_marginLeft="1dp"
             android:onClick="onDigit"/>
 
-
-
-
-
-
-
-
     </LinearLayout>
     <!-- Row 2 -->
     <LinearLayout
@@ -176,13 +169,6 @@
             android:layout_marginLeft="1dp"
             android:onClick="onDigit"/>
 
-
-
-
-
-
-
-
     </LinearLayout>
     <!-- Row 4 -->
     <LinearLayout
@@ -222,7 +208,7 @@
             android:layout_marginRight="1dp"
             android:layout_marginBottom="1dp"
             android:layout_marginLeft="1dp"
-            android:onClick="onDigit"/>
+            android:onClick="onClear"/>
 
         <Button
             android:id="@+id/btnAdd"
